# akuma-bot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.dev  Makefile  README.md  SECURITY.md  config.dev.json  conftest.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
src/: __init__.py  main.py
src/akuma_bot/: __init__.py  main.py
src/akuma_bot/application/: __init__.py
src/akuma_bot/domain/: __init__.py  errors.py
src/application/history/: __init__.py  use_cases.py
src/application/ports/: panel_gateway.py  time_provider.py
src/application/use_cases/: __init__.py  history_queries.py  stop_playback.py
src/domain/: __init__.py
src/domain/alerts/: entities.py  services.py
src/domain/entities/: __init__.py  guild_session.py
src/domain/history/: __init__.py  repositories.py  value_objects.py
src/domain/playback/: __init__.py  entities.py
src/infrastructure/: __init__.py
src/infrastructure/alerts/: __init__.py  monitor.py  participant_query_service.py  space_query_service.py  (+1 more)
tests/: test_helpers.py
tests/alerts/: __init__.py  test_config_store.py  test_manage_alert_accounts.py  test_manage_alert_accounts_extended.py  test_monitor_runner.py  test_poll_use_cases.py  test_space_query_aliases.py
tests/discord/: test_command_facade.py  test_dash_and_transcript_guards.py
tests/history/: __init__.py  test_domain.py  test_repositories.py  test_use_cases.py
tests/playback/: test_playback_summary.py
tests/transcription/: test_downloader_metadata.py
(+93 files in other folders)
