[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akuma-bot"
version = "0.1.0"
description = "Discord voice bot for X Spaces and YouTube"
requires-python = ">=3.11"
dependencies = [
  "discord.py>=2.3.0",
  "yt-dlp>=2024.1.0",
  "PyNaCl>=1.5.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
