[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "botkumax"
license = {text = "MIT"}
version = "1.0.0"
description = "Discord voice bot for X Spaces"
requires-python = ">=3.11"
authors = [
  {name = "Me"}
]
keywords = ["discord", "bot", "audio", "spaces", "youtube"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11"
]
dependencies = [
  "discord.py>=2.3.0",
  "yt-dlp>=2024.1.0",
  "PyNaCl>=1.5.0",
  "faster-whisper>=0.10.0",
  "aiohttp>=3.9.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21.0"
]

[project.scripts]
botkumax = "main:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["domain*", "application*", "infrastructure*"]
